--- a/client.yaml
+++ b/client.yaml
@@ -8,7 +8,7 @@ spec:
   containers:
     - name: iperf-client
       image: networkstatic/iperf3
-      args: ["--client", "iperf-server", "--time", "30"]
+      args: ["--client", "192.168.196.65", "--time", "30"]
       resources:
         requests:
           memory: "64Mi"
