use internal address

--- a/client.yaml
+++ b/client.yaml
@@ -5,10 +5,11 @@ metadata:
   labels:
     app: iperf
 spec:
+  restartPolicy: Never
   containers:
     - name: iperf-client
       image: networkstatic/iperf3
-      args: ["--client", "192.168.196.65", "--time", "30"]
+      args: ["--client", "iperf-server.default.svc.cluster.local", "--time", "30"]
       resources:
         requests:
           memory: "64Mi"
