--- a/server/Chart.yaml
+++ b/server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: accel-overlay-nw
+name: accel-overlay-nw-server
 description: A Helm chart for network benchmarking
 type: application
 version: 0.1.0
