--- a/client/templates/client.yaml
+++ b/client/templates/client.yaml
@@ -7,6 +7,15 @@ metadata:
   labels:
     app: iperf-client-{{ add $i 1 }}
 spec:
+  affinity:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+            - matchExpressions:
+                - key: iperf
+                  operator: In
+                  values:
+                    - server
   restartPolicy: Never
   containers:
     - name: iperf-client
