--- a/server/templates/server.yaml
+++ b/server/templates/server.yaml
@@ -7,6 +7,15 @@ metadata:
   labels:
     app: iperf-server-{{ add $i 1 }}
 spec:
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: iperf
+                operator: In
+                values:
+                  - server
   restartPolicy: Never
   containers:
     - name: iperf-server
