update script to wait

--- a/client/templates/client.yaml
+++ b/client/templates/client.yaml
@@ -6,6 +6,7 @@ metadata:
   name: iperf-client-{{ add $i 1 }}
   labels:
     app: iperf-client-{{ add $i 1 }}
+    type: client
 spec:
   affinity:
     nodeAffinity:
