added all images

--- a/rfs/Dockerfile
+++ b/rfs/Dockerfile
@@ -5,13 +5,13 @@ FROM networkstatic/iperf3
 RUN apt-get update
 RUN apt-get install dos2unix
 
-COPY enable_rps.sh /usr/local/bin/enable_rps.sh
+COPY enable_rfs.sh /usr/local/bin/enable_rfs.sh
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
-RUN dos2unix /usr/local/bin/enable_rps.sh
+RUN dos2unix /usr/local/bin/enable_rfs.sh
 RUN dos2unix /usr/local/bin/entrypoint.sh
 
-RUN chmod +x /usr/local/bin/enable_rps.sh
+RUN chmod +x /usr/local/bin/enable_rfs.sh
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
