--- a/server-rps-7/templates/server.yaml
+++ b/server-rps-7/templates/server.yaml
@@ -20,7 +20,7 @@ spec:
   restartPolicy: Never
   containers:
     - name: iperf-server
-      image: networkstatic/iperf3
+      image: srinva/iperf-rps-7:latest
       args: ["--server"]
       resources:
         requests:
