--- a/server-rps/Chart.yaml
+++ b/server-rps/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: accel-overlay-nw-server
+name: accel-overlay-nw-server-rps
 description: A Helm chart for network benchmarking
 type: application
 version: 0.1.0
