--- a/server-rps-7/templates/server.yaml
+++ b/server-rps-7/templates/server.yaml
@@ -21,6 +21,9 @@ spec:
   containers:
     - name: iperf-server
       image: srinva/iperf-rps-7:latest
+      securityContext:
+        privileged: true
+        runAsUser: 0
       args: ["--server"]
       resources:
         requests:
