read only false

--- a/server-rps/templates/server.yaml
+++ b/server-rps/templates/server.yaml
@@ -24,6 +24,7 @@ spec:
       securityContext:
         privileged: true
         runAsUser: 0
+        readOnlyRootFilesystem: false
       args: ["--server"]
       resources:
         requests:
