--- a/server-rps-7/templates/server.yaml
+++ b/server-rps-7/templates/server.yaml
@@ -24,6 +24,7 @@ spec:
       securityContext:
         privileged: true
         runAsUser: 0
+      imagePullPolicy: Always
       args: ["--server"]
       resources:
         requests:
