--- a/server-rps/templates/server.yaml
+++ b/server-rps/templates/server.yaml
@@ -24,7 +24,7 @@ spec:
       securityContext:
         privileged: true
         runAsUser: 0
-        readOnlyRootFilesystem: false
+      imagePullPolicy: Always
       args: ["--server"]
       resources:
         requests:
