--- a/server-rfs/templates/server.yaml
+++ b/server-rfs/templates/server.yaml
@@ -24,6 +24,7 @@ spec:
           privileged: true
           runAsUser: 0
       image: srinva/iperf-rfs:latest
+      imagePullPolicy: Always
       args: ["--server"]
       resources:
         requests:
